# avatar_original

./: .env.secrets.example  .gitignore  README.md  firebase.json  manual_deploy.sh  set_secrets.sh
.github/workflows/: ci.yml  deploy-production.yml  firebase-hosting-merge.yml  firebase-hosting-pull-request.yml  pr-creator.yml  release.yml  test.yml
backend/: .env.example  Dockerfile  debug_sdk.py  list_models.py  main.py  pyproject.toml  test_gemini_tts.py
docs/: cicd.md  environment_variables.md
frontend/: .env.example  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
frontend/public/: audio-processor.js
frontend/src/: App.jsx  firebase.js  index.css
